--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "DemoUIH25.sln"
+    "dotnet.defaultSolution": "S11-Persistance.sln"
 }
